# jeffkala-nautobot-eda-collection

./: Dockerfile  README.md  galaxy.yml  pyproject.toml  requirements.yml  tasks.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  galaxy.yml
docs/: requirements.txt
playbooks/: pb_example1.yml  pb_example2.yml
plugins/: nautobot_changelog.py
plugins/event_source/: nautobot_changelog.py
tests/: README.md  __init__.py
