[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | settings.py     # This is where you define files that should not be stylized by black
                     # the root of the project
)
'''

[tool.poetry]
name = "jeffkala-nautobot-eda-collection"
version = "0.1.0"
description = "EDA source plugin for Nautobot Changelogs"
authors = ["Jeff Kala <info@networktocode.com>"]

[tool.poetry.dependencies]
python = "^3.7"
# NOTE: By default with this spec will go to 2.10
ansible = "^2.9.12"
# NOTE: Jinja2 has to be explicitly installed in ansible 2.10
Jinja2 = "^2.11.2"
# NOTE: There is a bug in Markdown v3.3.5 that crashes Poetry
Markdown = "3.3.4"

[tool.poetry.dev-dependencies]
ansible-lint = "*"
invoke = "*"
bandit = "*"
pylint = "*"
pytest = "*"
yamllint = "*"

[tool.pylint.master]
ignore=".venv"

[tool.pylint.basic]
# No docstrings required for private methods (Pylint default), or for test_ functions, or for inner Meta classes.
no-docstring-rgx="^(_|test_|Meta$)"

[tool.pylint.messages_control]
# Line length is enforced by Black, so pylint doesn't need to check it.
# Pylint and Black disagree about how to format multi-line arrays; Black wins.
disable = """,
    line-too-long
    """

[tool.pylint.miscellaneous]
# Don't flag TODO as a failure, let us commit with things that still need to be done in the code
notes = """,
    FIXME,
    XXX,
    """

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = "-vv --doctest-modules"
